--- a/Linear REgression/Untitled.ipynb
+++ b/Linear REgression/Untitled.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Linearity: assumes that the relationship between predictors and target variable is linear\n",
+    "No noise: eg. that there are no outliers in the data\n",
+    "No collinearity: if you have highly correlated predictors, it’s most likely your model will overfit\n",
+    "Normal distribution: more reliable predictions are made if the predictors and the target variable are normally distributed\n",
+    "Scale: it’s a distance-based algorithm, so preditors should be scaled — like with standard scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
